# pyweb

./: .gitignore  INTEGRATION.md  README.md  SPEC.md  main.py  pyproject.toml  shit.html  stdout.py
demo/: pipeline.ts  server.py
examples/: example_inline_code_frags.pwb  example_multiline_code_frags.pwb  prog.pwb  prog.py  stress_1.pwb  template.pwb  template.py  test1.pwb  test1.py
pyweb/: __main__.py  cli.py
pyweb/core/: __init__.py  anchorer.py  comments.py  importer.py  models.py  parser.py  sourcemap.py  store.py  sync.py  writer.py
tests/: test_anchorer.py  test_cli.py  test_comments.py  test_importer.py  test_integration.py  test_models.py  test_parser.py  test_sourcemap.py  test_store.py  test_sync.py  test_views.py  test_writer.py
