[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyweb"
version = "0.2.0"
description = "Hierarchical code fragment overlay with bidirectional sync"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[tool.setuptools.packages.find]
include = ["pyweb*"]

[project.scripts]
pyweb = "pyweb.cli:cli"
